/*
 * $Id: ChangeLog,v 1.429 2007-10-29 21:43:04 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-10-29 16:38 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
  * source/h_report.prg
    * added class TCalCprint for open office  thanks to Jose Miguel

2007-10-19 13:30 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_combo.prg
    * converted to setget to assign displayvalue on DISPLAYEDIT clause

2007-10-19 9:12 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_combo.prg
    + added ::displayvalue alias for ::caption.

2007-10-18 23:19 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    * Fixed ::EditControls update on ::DeleteColumn() and ::AddColumn().

2007-10-18 22:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/winprint.ch
    * Verifies for ooHG's variables initialized on END PAGE.

2007-10-15 23:02 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Reverted previous change for already visible windows.

2007-10-14 20:22 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/winprint.ch
    * Prevents END PAGE for an uninitialized graphical environment.
  * source/h_textbox.prg
    * TTextPicture:Picture can be changed after control's creation.
  * source/h_windows.prg
    * If modal window is already visible, doesn't lock other windows
      again.
    * WM_SIZE message optimized for inactive windows.

2007-10-14 17:42 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * ./compile_pc.bat
    + WSOCK32.LIB added.
  * source/h_grid.prg
    ! Fixed JUSTIFY array.

2007-10-11 9:15 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_controlmisc.prg
    ! fixed change header with setproperty.
  * source/h_grid.prg
  * source/c_grid.c
    ! syntax correct and reformating.
